--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ color: #1F1845;
     margin-bottom: 35px;
     padding-right: 40px;
     font-weight: 400;
-    color: #ADB0C4;
+    color: #60698D;
 }
 
 .mybutton{
@@ -97,4 +97,53 @@ color: #1F1845;
 
 .myimg{
     
+}
+
+.myparagraf{
+font-family: var(--global--font-body);
+font-size: 15px;
+font-weight: 700;
+line-height: 30px;
+margin-bottom: 7px;
+color: #FF7D3B;
+}
+
+.myschrift{
+    font-size: 34px;
+line-height: 1.5;
+font-weight: 500;
+margin-bottom: 13px;
+text-transform: capitalize;
+}
+
+.myicon1{
+color: #FF7D3B;
+margin-left: 190px;
+}
+
+.mykuli{
+    font-size: 20px;
+font-weight: 700;
+line-height: 42px;
+margin-bottom: 10px;
+text-transform: capitalize;
+color: #1F1845;
+}
+
+.paragraf{
+font-size: 16px;
+font-weight: 400;
+line-height: 1.8;
+color: #60698D;
+margin-bottom: 0;
+}
+
+.myicon2{
+    color: #FF7D3B ;
+    margin-left: 180px;
+}
+
+.myicon3{
+    color: #FF7D3B ;
+    margin-left: 180px; 
 }
