--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,58 @@ margin-bottom: 0;
     color: #FF7D3B ;
     margin-left: 180px; 
 }
+
+.myimage{
+
+}
+
+.paragraf1{
+    font-family: var(--global--font-body);
+font-size: 15px;
+font-weight: 700;
+line-height: 30px;
+margin-bottom: 7px;
+color: #FF7D3B;
+text-transform: capitalize;
+margin-left: 70px;
+margin-top: 250px;
+}
+
+.mysentence{
+    font-size: 34px;
+line-height: 1.5;
+font-weight: 700;
+margin-bottom: 13px;
+text-transform: capitalize;
+margin: 0 0 28px;
+color: #1F1845;
+margin-left: 70px;
+}
+
+.paragraf2{
+    font-size: 18px;
+font-weight: 400;
+line-height: 1.8;
+margin-bottom: 0;
+padding: 0;
+color: #60698D;
+margin-top: 0;
+margin-left: 70px;
+}
+
+.myclick{
+    height: 70px;
+    padding: 0 60px;
+    cursor: pointer;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 800;
+    background-color: #FF7D3B;
+    border: 1px solid #FF7D3B;
+    border-radius: 6px;
+    text-decoration: none;
+    margin-left: 70px;
+    margin-bottom: 50px;
+}
